Fix #62: Horizontal scrollbar missing in charts

--- a/src/sass/theme/_charts.scss
+++ b/src/sass/theme/_charts.scss
@@ -19,6 +19,11 @@
  *     +--- wt-chart-box-fact
  */
 
+.wt-chart {
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+
 .wt-chart-box {
     font-size: $font-size-sm;
 }
